# Django_Website

./: .gitignore  qwe.txt
web_app/: pag  pyproject.toml  qwe.txt
web_app/web_app/itproger/: create_docker_container.txt  docker-compose.yml  fly.toml  requirements.txt
web_app/web_app/itproger/config/: asgi.py  settings.py  urls.py  wsgi.py
web_app/web_app/itproger/contact/: admin.py  forms.py  models.py  urls.py  views.py
web_app/web_app/itproger/contact/migrations/: 0001_initial.py  0002_alter_contactmodel_website.py  0003_about_social_imageabout.py  0004_imageabout_alt.py  0005_alter_imageabout_alt.py  0006_rename_image_social_icon.py
web_app/web_app/itproger/contact/templatetags/: social_tags.py
web_app/web_app/itproger/itproger/: settings.py  urls.py
web_app/web_app/itproger/main/: forms.py  urls.py  views.py
web_app/web_app/itproger/news/: admin.py  forms.py  models.py  urls.py  views.py
web_app/web_app/itproger/news/migrations/: 0001_initial.py  0002_alter_article_options_alter_article_date.py  0003_alter_article_date.py  0004_alter_article_date.py  0005_alter_article_date.py  0006_category_comment_post_tag_delete_article_post_tags_and_more.py  0007_post_slug.py  0008_alter_comment_website.py  0009_comment_create_at.py  0010_alter_comment_create_at.py  0011_remove_comment_email_remove_comment_name_and_more.py  0012_alter_comment_user.py  0013_rename_user_comment_user_id.py  0014_remove_comment_user_id_comment_user.py  0015_alter_comment_user.py  0016_alter_post_text.py
web_app/web_app/itproger/news/templatetags/: right_side_menu.py
(+25 files in other folders)
